infra/k8s/srv/base/notifications-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-app
  template:
    metadata:
      labels:
        app: notifications-app
    spec:
      containers:
        - name: notifications-app
          image: notifications_service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-app
  namespace: default
spec:
  ports:
    - port: 81
      targetPort: 80
  selector:
    app: notifications-app
