infra/k8s/srv/base/notifications-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-postgres
  template:
    metadata:
      labels:
        app: notifications-postgres
    spec:
      containers:
        - name: notifications-postgres
          image: notifications_postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: notifications-postgres
  namespace: default
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: notifications-postgres
