infra/k8s/srv/base/tweets-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tweets-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tweets-postgres
  template:
    metadata:
      labels:
        app: tweets-postgres
    spec:
      containers:
      - name: tweets-postgres
        image: tweets_postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: tweets-volume
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: tweets-volume
        persistentVolumeClaim:
          claimName: tweets-pv-claim


---
apiVersion: v1
kind: Service
metadata:
  name: tweets-postgres
  namespace: default
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: tweets-postgres
