infra/k8s/srv/base/users-app-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-app
  template:
    metadata:
      labels:
        app: users-app
    spec:
      containers:
      - name: users-app
        image: users_service
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: users-app
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: users-app
