infra/k8s/srv/base/users-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-postgres
  template:
    metadata:
      labels:
        app: users-postgres
    spec:
      containers:
      - name: users-postgres
        image: users_postgres
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: users-volume
          mountPath: /var/lib/postgresql/data/
      volumes:
      - name: users-volume
        persistentVolumeClaim:
          claimName: users-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: users-postgres
  namespace: default
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: users-postgres
