infra/k8s/srv/base/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: "/api/users/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: users-app
                port:
                  number: 80
          
          - path: "/api/notifications/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: notifications-app
                port:
                  number: 81

  ingressClassName: nginx
